--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,14 @@
 
+@misc{APP2020,
+  title = {Platform {{Support}}},
+  author = {{Apple Inc.}},
+  year = {2020},
+  url = {https://swift.org/about/\#platform-support},
+  urldate = {2020-08-13},
+  journal = {Swift.org - About Swift},
+  language = {English}
+}
+
 @misc{BAR2013,
   title = {Blink: {{A}} Rendering Engine for the {{Chromium}} Project},
   author = {Barth, Adam},
@@ -128,6 +138,15 @@
   title = {Deutschland 4.0 \textendash{} {{Wie}} Die {{Digitale Transformation}} Gelingt},
   author = {Kollmann, Tobias and Schmidt, Holger},
   publisher = {{Springer Gabler, Wiesbaden}}
+}
+
+@misc{LAT,
+  title = {Chris {{Lattner}}'s {{Homepage}}},
+  author = {Lattner, Chris},
+  url = {http://www.nondot.org/sabre/},
+  urldate = {2020-08-13},
+  journal = {Chris Lattner's Homepage},
+  language = {English}
 }
 
 @inproceedings{LI2019,
