Update implementation content

--- a/preprocessors/definitions.tex
+++ b/preprocessors/definitions.tex
@@ -11,7 +11,7 @@
 %
 % Use monospaced line numbers in listings only when the release flag is set
 \ifdefined\isrelease
-	\renewcommand{\theFancyVerbLine}{\sfmono\textcolor{gray25}{\scriptsize\oldstylenums{\arabic{FancyVerbLine}}}}
+	%\renewcommand{\theFancyVerbLine}{\sfmono\textcolor{gray25}{\scriptsize\oldstylenums{\arabic{FancyVerbLine}}}}
 \fi
 
 %
