--- a/preprocessors/page.tex
+++ b/preprocessors/page.tex
@@ -25,6 +25,7 @@
 
 %
 % Format the chapter titles
+\titlespacing*{\chapter} {0pt}{150pt}{40pt}
 \titleformat{\chapter}[hang]%
 	{\Huge\bfseries}%
 	{%
@@ -35,3 +36,13 @@
 	}%
 	{0pt}%
 	{\Huge\bfseries}%
+
+	% \titleformat{\chapter}[display]
+	% {\bfseries\Large}
+	% {\filleft\MakeUppercase{\chaptertitlename} \Huge\thechapter}
+	% {4ex}
+	% {\titlerule
+	% \vspace{2ex}%
+	% \filright}
+	% [\vspace{2ex}%
+	% \titlerule]
