--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,30 @@
 
+@misc{APP2016,
+  title = {Work with {{View Controllers}}},
+  author = {{Apple Inc.}},
+  year = {2016},
+  month = dec,
+  url = {https://developer.apple.com/library/archive/referencelibrary/GettingStarted/DevelopiOSAppsSwift/WorkWithViewControllers.html},
+  urldate = {2020-08-22},
+  copyright = {Copyright \textcopyright{} 2008 Apple Inc.},
+  journal = {Start Developing iOS Apps},
+  language = {English}
+}
+
+@misc{APP2018,
+  title = {Model-{{View}}-{{Controller}}},
+  shorttitle = {Model-{{View}}-{{Controller}}},
+  author = {{Apple Inc.}},
+  year = {2018},
+  month = jun,
+  url = {https://developer.apple.com/library/archive/documentation/General/Conceptual/DevPedia-CocoaCore/MVC.html},
+  urldate = {2020-08-25},
+  copyright = {Copyright \textcopyright{} 2018 Apple Inc.},
+  journal = {Model-View-Controller},
+  language = {English},
+  type = {Documentation}
+}
+
 @misc{APP2020,
   title = {Platform {{Support}}},
   author = {{Apple Inc.}},
