--- a/thesis.tex
+++ b/thesis.tex
@@ -29,6 +29,10 @@
 	name={Lokalisierung},
 	description={Das Durchführen einer Übersetzung der Anwendung in eine andere Sprache bzw. Kultur}
 }
+\newglossaryentry{protocol}{
+	name={Protokoll},
+	description={In der Swift-Entwicklung – in anderen Sprachen auch als Interface bekannt – eine Zusammenfassung von deklarierten Funktionen, ohne Implementation. Wenn eine Klasse oder eine andere Struktur ein Protokoll implementiert, müssen die deklarierten Funktionen in dieser Klasse implementiert werden}
+}
 
 \newcounter{currentpage}
 
