--- a/references.bib
+++ b/references.bib
@@ -35,6 +35,18 @@
   language = {English}
 }
 
+@misc{APP2020a,
+  title = {Appearance {{Effects}} and {{Motion}} - {{Human Interface Guidelines}}},
+  shorttitle = {Appearance {{Effects}} and {{Motion}}},
+  author = {{Apple Inc.}},
+  year = {2020},
+  url = {https://developer.apple.com/design/human-interface-guidelines/accessibility/overview/appearance-effects/},
+  urldate = {2020-09-07},
+  copyright = {Copyright \textcopyright{} 2020 Apple Inc.},
+  journal = {Appearance Effects and Motion - Accessibility - Human Interface Guidelines - Apple Developer},
+  language = {English}
+}
+
 @misc{BAR2013,
   title = {Blink: {{A}} Rendering Engine for the {{Chromium}} Project},
   author = {Barth, Adam},
