--- a/pages/abstract.tex
+++ b/pages/abstract.tex
@@ -1,3 +1,10 @@
 \chapter*{Abstract}
-Das Ziel dieser Bachelorthesis ist es eine benutzerfreundliche und einfach zu bedienende mobile Anwendung zu entwickeln, um Indoor Maps zu kartographieren und für die weitere Verwendung bereitszustellen. Dazu wurden Anforderungen an eine solche Anwendung aufgestellt und die aktuellen Lösungen anhand dieser Anforderungen analysiert um etwaige Probleme zu erkennen.
+Während der Tourismus und die Reiselust der Menschen steigt werden Kartendaten und Navigation immer wichtiger, um sich orientieren zu können.
+Um diese Entwicklung zu unterstützen werden \emph{Indoor Maps} immer wichtiger, doch sind komplex in deren Erstellung.\pbreak%
+%
+Ziel dieser Bachelorthesis ist es eine benutzerfreundliche und einfach zu bedienende mobile Anwendung zu entwickeln, um Indoor Maps zu kartographieren und für die weitere Verwendung bereitszustellen.
+Um dieses Ziel zu erreichen werden Anforderungen an eine solche Anwendung aufgestellt und die aktuell existierenden Lösungen anhand dieser Anforderungen analysiert um etwaige Probleme zu erkennen.\pbreak%
+%
+In der Anwendung sollen Benutzer Indoor Maps erstellen und für eine Bereitstellung exportieren können.
+In der technischen Umsetzung wurde das Software Development Kit von Apple genutzt, um mittels Swift eine Anwendung für das Betriebssystem iPadOS zu entwickeln.
 \clearpage
