--- a/preprocessors/packages.tex
+++ b/preprocessors/packages.tex
@@ -111,3 +111,8 @@
 %
 % Used to generate glossary entries
 \usepackage[automake]{glossaries}
+
+%
+% Used to display a directory tree
+\usepackage{dirtree}
+\DTsetlength{0.3em}{1em}{0.3em}{0.4pt}{1.6pt}
