Add appendix images and link to the source code repository

--- a/references.bib
+++ b/references.bib
@@ -29,7 +29,7 @@
   title = {Platform {{Support}}},
   author = {{Apple Inc.}},
   year = {2020},
-  url = {https://swift.org/about/\#platform-support},
+  url = {https://swift.org/about/#platform-support},
   urldate = {2020-08-13},
   journal = {Swift.org - About Swift},
   language = {English}
@@ -287,5 +287,3 @@
 @misc{zotero-8,
   type = {Misc}
 }
-
-
