--- a/thesis.tex
+++ b/thesis.tex
@@ -62,12 +62,6 @@
 	\clearpage
 
 	%
-	% List of tables
-	\listoftables
-	\addtableofcontentsitem{Tabellenverzeichnis}
-	\clearpage
-
-	%
 	% Table of acronyms
 	\chapter*{Abkürzungsverzeichnis}
 	\addtableofcontentsitem{Abkürzungsverzeichnis}
@@ -121,6 +115,7 @@
 	\chapter*{Anhang}
 	\appendix
 	\addtableofcontentsitem{Anhang}
+	\input pages/appendix
 	\clearpage
 
 	%
