--- a/preprocessors/definitions.tex
+++ b/preprocessors/definitions.tex
@@ -53,3 +53,11 @@
 		\label{#2}
 	\end{listing}
 }
+
+\newcommand{\appendixfigure}[2]{
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.25]{images/appendix/#1}
+	\caption*{#2}
+\end{figure}
+}
