Finish introduction and theory and basics sections

--- a/references.bib
+++ b/references.bib
@@ -25,11 +25,23 @@
   type = {Documentation}
 }
 
+@misc{APP2019,
+  title = {New Features Available with {{iOS}} 13},
+  author = {{Apple Inc.}},
+  year = {2019},
+  url = {https://www.apple.com/ios/ios-13/features/},
+  urldate = {2020-09-15},
+  copyright = {Copyright \textcopyright{} 2020 Apple Inc. All rights reserved.},
+  journal = {iOS 13 - Features - Apple},
+  language = {English},
+  type = {Features}
+}
+
 @misc{APP2020,
   title = {Platform {{Support}}},
   author = {{Apple Inc.}},
   year = {2020},
-  url = {https://swift.org/about/#platform-support},
+  url = {https://swift.org/about/\#platform-support},
   urldate = {2020-08-13},
   journal = {Swift.org - About Swift},
   language = {English}
@@ -242,6 +254,18 @@
   language = {English}
 }
 
+@article{PUD2007,
+  title = {{Neuer Google-Dienst Street-View Google stellte auf der diesj\"ahrigen Where-2.0-Konferenz in San Jose einen neuen Geo-Dienst f\"ur Google Maps vor.}},
+  shorttitle = {{Neuer Google-Dienst Street-View}},
+  author = {Puder, Arno},
+  year = {2007},
+  month = may,
+  url = {https://www.heise.de/ix/meldung/Neuer-Google-Dienst-Street-View-133610.html},
+  urldate = {2020-09-15},
+  journal = {iX - Magazin f\"ur professionelle Informationstechnik},
+  language = {Deutsch}
+}
+
 @misc{RED2016,
   title = {What Is {{Browser Support}}?},
   author = {Redfern, Dave},
@@ -250,6 +274,19 @@
   url = {https://www.iweb.co.uk/2016/11/what-is-browser-support/},
   urldate = {2020-08-02},
   language = {English}
+}
+
+@misc{ROL2019,
+  title = {Announcing the {{Brandify Local Search Consumer Survey}}},
+  author = {Rollison, Damian},
+  year = {2019},
+  month = nov,
+  url = {https://www.brandify.com/blog/announcing-the-brandify-local-search-consumer-survey},
+  urldate = {2020-09-15},
+  copyright = {Copyright 2020 \textcopyright{} Brandify. All Rights Reserved},
+  journal = {Brandify Blog - The Latest Local Search News, Trends, and Insights},
+  language = {English},
+  type = {Survey {{Result}}}
 }
 
 @misc{STA2020,
@@ -284,6 +321,25 @@
   language = {English}
 }
 
+@article{ZLA2013,
+  title = {Problems {{In Indoor Mapping And Modelling}}},
+  shorttitle = {Problems {{In Indoor Mapping And Modelling}}},
+  author = {Zlatanova, Sisi and Sithole, George and Nakagawa, Masafumi and Zhu, Qing},
+  year = {2013},
+  month = nov,
+  volume = {XL-4/W4},
+  pages = {63--68},
+  doi = {10.5194/isprsarchives-XL-4-W4-63-2013},
+  url = {https://www.researchgate.net/profile/Sisi_Zlatanova/publication/269710174_Problems_In_Indoor_Mapping_and_Modelling/links/5494b53f0cf2ec1337581b22/Problems-In-Indoor-Mapping-and-Modelling.pdf},
+  urldate = {2020-09-15},
+  abstract = {Research in support of indoor mapping and modelling (IMM) has been active for over thirty years. This research has come in the form of As-Built surveys, Data structuring, Visualisation techniques, Navigation models and so forth. Much of this research is founded on advancements in photogrammetry, computer vision and image analysis, computer graphics, robotics, laser scanning and many others. While IMM used to be the privy of engineers, planners, consultants, contractors, and designers, this is no longer the case as commercial enterprises and individuals are also beginning to apply indoor models in their business process and applications. There are three main reasons for this. Firstly, the last two decades have seen greater use of spatial information by enterprises and the public. Secondly, IMM has been complimented by advancements in mobile computing and internet communications, making it easier than ever to access and interact with spatial information. Thirdly, indoor modelling has been advanced geometrically and semantically, opening doors for developing user-oriented, context-aware applications. This reshaping of the public's attitude and expectations with regards to spatial information has realised new applications and spurred demand for indoor models and the tools to use them. This paper examines the present state of IMM and considers the research areas that deserve attention in the future. In particular the paper considers problems in IMM that are relevant to commercial enterprises and the general public, groups this paper expects will emerge as the greatest users IMM. The subject of indoor modelling and mapping is discussed here in terms of Acquisitions and Sensors, Data Structures and Modelling, Visualisation, Applications, Legal Issues and Standards. Problems are discussed in terms of those that exist and those that are emerging. Existing problems are those that are currently being researched. Emerging problems are those problems or demands that are expected to arise because of social changes, technological advancements, or commercial interests. The motivation of this work is to define a set of research problems that are either being investigated or should be investigated. These will hopefully provide a framework for assessing progress and advances in indoor modelling. The framework will be developed in the form of a problem matrix, detailing existing and emerging problems, their solutions and present best practices. Once the framework is complete it will be published online so that the IMM community can discuss and modify it as necessary. When the framework has reached a steady state an empirical benchmark will be provided to test solutions to posed problems. A yearly evaluation of the problem matrix will follow, the results of which will be published.},
+  copyright = {\textcopyright{} Author(s) 2013},
+  journal = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+  language = {English}
+}
+
 @misc{zotero-8,
   type = {Misc}
 }
+
+
