--- a/pages/appendix.tex
+++ b/pages/appendix.tex
@@ -1,3 +1,26 @@
+%
+%	REAR MATTER
+\pagenumbering{Roman}
+\pagestyle{plain}
+\setcounter{page}{\thecurrentpage}
+
+%
+% Bibliography
+\printbibliography
+\addtableofcontentsitem{Literaturverzeichnis}
+\clearpage
+
+%
+% Glossary
+\printglossary
+\addtableofcontentsitem{Glossar}
+\clearpage
+
+%
+% Attachments
+\chapter*{Anhang}
+\appendix
+\addtableofcontentsitem{Anhang}
 \section*{A Anwendungsaufnahmen}
 \appendixfigure{01-settings}{Übersicht der App-Einstellungen.}
 \vspace*{\fill}
@@ -18,3 +41,18 @@
 \clearpage
 \section*{B Quellcode}
 Zur besseren Nachvollziehbarkeit kann der komplette Quellcode der entwickelten Anwendung unter \url{https://github.com/dennisprudlo/indoor-architect} eingesehen und heruntergeladen werden.
+\clearpage
+
+%
+% Declaration of Authorship
+\chapter*{Eidesstattliche Versicherung}
+Ich versichere hiermit, dass ich die vorliegende Bachelorthesis selbstständig und ohne fremde Hilfe
+angefertigt und keine andere als die angegebene Literatur benutzt habe. Alle von anderen Autoren
+wörtlich übernommenen Stellen wie auch die sich an die Gedankengänge anderer Autoren eng anlehnenden
+Ausführungen meiner Arbeit sind besonders gekennzeichnet.\\[1ex]
+Diese Arbeit wurde bisher in gleicher oder ähnlicher Form keiner anderen Prüfungsbehörde vorgelegt
+und auch nicht veröffentlicht.\\[3ex]
+Berlin, den \today\\[20ex]
+\line(1,0){200}\\
+Dennis Prudlo
+\clearpage
