Add content to the analysis chapter and complete the QGIS section

--- a/preprocessors/definitions.tex
+++ b/preprocessors/definitions.tex
@@ -61,3 +61,16 @@
 	\caption*{#2}
 \end{figure}
 }
+
+\newcommand{\analysisresults}[5]{
+\subsubsection{Preisliche Stemmbarkeit}
+#1
+\subsubsection{Schnelle Einarbeitungszeit}
+#2
+\subsubsection{Leichte und Nachvollziehbare Bedienung}
+#3
+\subsubsection{Mobile Nutzung}
+#4
+\subsubsection{Fazit}
+#5
+}
