--- a/references.bib
+++ b/references.bib
@@ -251,7 +251,20 @@
   url = {https://googleblog.blogspot.com/2008/09/fresh-take-on-browser.html},
   urldate = {2020-08-02},
   journal = {Official Google Blog},
-  language = {English}
+  language = {English},
+  type = {Blog}
+}
+
+@misc{PIC2014,
+  title = {Android: {{Be}} Together. {{Not}} the Same.},
+  author = {Pichai, Sundar},
+  year = {2014},
+  month = oct,
+  url = {https://blog.google/products/android/android-be-together-not-same/},
+  urldate = {2020-09-19},
+  journal = {The Keyword},
+  language = {English},
+  type = {Blog}
 }
 
 @article{PUD2007,
@@ -264,6 +277,64 @@
   urldate = {2020-09-15},
   journal = {iX - Magazin f\"ur professionelle Informationstechnik},
   language = {Deutsch}
+}
+
+@misc{QGI,
+  title = {{{QGIS}} - {{The Leading Open Source Desktop GIS}}},
+  author = {{QGIS}},
+  url = {https://www.qgis.org/en/site/about/index.html},
+  urldate = {2020-09-19},
+  journal = {Discover QGIS},
+  language = {English}
+}
+
+@misc{QGI2013,
+  title = {Feature: {{Quantum GIS}} Is Now Known Only as `{{QGIS}}'},
+  author = {{QGIS}},
+  year = {2013},
+  url = {https://www.qgis.org/en/site/forusers/visualchangelog200/index.html\#feature-quantum-gis-is-now-known-only-as-qgis},
+  urldate = {2020-09-19},
+  journal = {Changelog for QGIS 2.0},
+  language = {English},
+  type = {Changelog}
+}
+
+@misc{QGI2020,
+  title = {{{QGIS}} - {{A Free}} and {{Open Source Geographic Information System}}},
+  author = {{QGIS}},
+  year = {2020},
+  month = sep,
+  url = {https://www.qgis.org/de/site/},
+  urldate = {2020-09-19},
+  journal = {Welcome to the QGIS project!},
+  language = {English},
+  type = {Landing {{Page}}}
+}
+
+@misc{QGI2020a,
+  title = {{Unterst\"utzen Sie QGIS!}},
+  author = {{QGIS-Anwendergruppe Deutschland e.V.}},
+  year = {2020},
+  url = {https://www.qgis.de/\#unterstuetzen_sie_qgis},
+  urldate = {2020-09-19},
+  copyright = {CC-BY-SA},
+  journal = {start [QGIS-DE e.V.]},
+  language = {Deutsch},
+  type = {{Landing Page}}
+}
+
+@misc{QGI2020b,
+  title = {Documentation for {{QGIS}} 3.10},
+  shorttitle = {{{QGIS Documentation}}},
+  author = {{QGIS}},
+  year = {2020},
+  month = sep,
+  url = {https://docs.qgis.org/3.10/en/docs/index.html},
+  urldate = {2020-09-19},
+  copyright = {\textcopyright{} Copyright 2002-now, QGIS project},
+  journal = {Documentation for QGIS 3.10 \textendash{} QGIS Documentation documentation},
+  language = {English},
+  type = {Documentation}
 }
 
 @misc{RED2016,
@@ -297,6 +368,19 @@
   url = {https://gs.statcounter.com/browser-market-share/mobile/worldwide/\#monthly-201906-202007-bar},
   urldate = {2020-08-02},
   journal = {Statistics}
+}
+
+@misc{SUT2013,
+  title = {Release Final-2\_0\_0 - Qgis/{{QGIS}}},
+  shorttitle = {Final-2\_0\_0},
+  author = {Sutton, Tim},
+  year = {2013},
+  month = sep,
+  url = {https://github.com/qgis/QGIS/releases/tag/final-2_0_0},
+  urldate = {2020-09-19},
+  copyright = {Copyright \textcopyright{} 2020 GitHub, Inc.},
+  language = {English},
+  type = {Release {{Page}}}
 }
 
 @misc{TOR2020,
