Add usability test and localizable sections

--- a/pages/appendix.tex
+++ b/pages/appendix.tex
@@ -19,29 +19,43 @@
 %
 % Attachments
 \chapter*{Anhang}
-\appendix
 \addtableofcontentsitem{Anhang}
 \section*{A Anwendungsaufnahmen}
-\appendixfigure{01-settings}{Übersicht der App-Einstellungen.}
+\appendixfigure{01-settings}{A.1 Übersicht der App-Einstellungen.}
 \vspace*{\fill}
-\appendixfigure{02-create}{Popover-Formular zum Erstellen eines neuen Projektes.}
+\appendixfigure{02-create}{A.2 Popover-Formular zum Erstellen eines neuen Projektes.}
 \vspace*{\fill}
-\appendixfigure{03-project}{Übersicht eines ausgewählten Projektes (erkennbar in der Seitenleiste).}
+\appendixfigure{03-project}{A.3 Übersicht eines ausgewählten Projektes (erkennbar in der Seitenleiste).}
 \vspace*{\fill}
-\appendixfigure{04-address}{Formular zum Erstellen einer neuen Adresse, die im Projekt verfügbar wird.}
-\appendixfigure{05-province}{Auswahl für das Provinzfeld einer Adresse, nachdem bei der Länderauswahl das Land Deutschland gewählt wurde.}
-\appendixfigure{06-map}{Übersicht des Karteneditors mit der Werkzeugleiste auf der linken Seite.}
-\appendixfigure{07-ruler}{Verwendung des Ruler-Werkzeuges (erkennbar am dunklen Balken).}
-\appendixfigure{08-polygon}{Zeichnen eines Polygons in den Kartendaten.}
-\appendixfigure{09-unit}{Bearbeiten eines Unit-Features im Karteneditor.}
-\appendixfigure{10-change}{Auswahl zum Wechsel des Feature-Typs.}
-\appendixfigure{11-label}{Formular zum Anlegen eines weiteren Eintrags für das Name-Feld des Features.}
-\appendixfigure{12-labels}{Übersicht der Einträge für den Namen eines Features.}
-\appendixfigure{13-venue}{Formular der Einstellungen eines Venue-Features mit ausgewählter Adresse.}
+\appendixfigure{04-address}{A.4 Formular zum Erstellen einer neuen Adresse, die im Projekt verfügbar wird.}
+\appendixfigure{05-province}{A.5 Auswahl für das Provinzfeld einer Adresse, nachdem bei der Länderauswahl das Land Deutschland gewählt wurde.}
+\appendixfigure{06-map}{A.6 Übersicht des Karteneditors mit der Werkzeugleiste auf der linken Seite.}
+\appendixfigure{07-ruler}{A.7 Verwendung des Ruler-Werkzeuges (erkennbar am dunklen Balken).}
+\appendixfigure{08-polygon}{A.8 Zeichnen eines Polygons in den Kartendaten.}
+\appendixfigure{09-unit}{A.9 Bearbeiten eines Unit-Features im Karteneditor.}
+\appendixfigure{10-change}{A.10 Auswahl zum Wechsel des Feature-Typs.}
+\appendixfigure{11-label}{A.11 Formular zum Anlegen eines weiteren Eintrags für das Name-Feld des Features.}
+\appendixfigure{12-labels}{A.12 Übersicht der Einträge für den Namen eines Features.}
+\appendixfigure{13-venue}{A.13 Formular der Einstellungen eines Venue-Features mit ausgewählter Adresse.}
 \clearpage
 \section*{B Quellcode}
+\label{sec:appendixb}
 Zur besseren Nachvollziehbarkeit kann der komplette Quellcode der entwickelten Anwendung unter \url{https://github.com/dennisprudlo/indoor-architect} eingesehen und heruntergeladen werden.
-\clearpage
+\section*{C Usability Test Aufgabenbogen}
+\label{sec:appendixc}
+Erledige alle Aufgaben in der aufgelisteten Reihenfolge und Bewerte im Anschluss die Benutzung der Anwendung.
+\begin{description}
+	\item[A1] Erstelle ein neues Projekt mit dem Namen \emph{Usability Test Projekt}.
+	\item[A2] Aktualisiere die Beschreibung des erstellen Projektes zu \emph{Beispielprojekt für einen Usability Test}.
+	\item[A3] Füge eine neue Adresse hinzu und wähle Hamburg als Ort. Die restlichen Eingaben können frei gewählt werden.
+	\item[A4] Öffne den Kartenbearbeitungsmodus und zeichne ein sechseck. Notiere die angezeigte \emph{Feature ID} und wechsle den \emph{Feature Type} zu \emph{Venue}.
+	\item[A5] Vergebe einen beliebigen Namen und wähle die in Aufagbe 3 erstellte Adresse für das Objekt.
+	\item[A6] Miss die Entfernung zwischen Hamburg und Berlin und notiere das Ergebnis.
+\end{description}
+\begin{description}
+	\item[Bei welchen der sechs Aufgaben war unklar, was getan werden muss?]
+	\item[Beschreibe bei welchen Aufgaben du Schwierigkeiten hattest und welche.]
+\end{description}
 
 %
 % Declaration of Authorship
