--- a/references.bib
+++ b/references.bib
@@ -166,6 +166,20 @@
   number = {Issues in Informing Science and Information Technology}
 }
 
+@misc{ISH2005,
+  title = {Localization vs. {{Internationalization}}},
+  shorttitle = {Localization vs. {{Internationalization}}},
+  author = {Ishida, Richard and Miller, Susan K.},
+  year = {2005},
+  month = dec,
+  url = {https://www.w3.org/International/questions/qa-i18n},
+  urldate = {2020-09-20},
+  copyright = {Copyright \textcopyright{} 2005-2020 W3C},
+  journal = {Localization vs. Internationalization},
+  language = {English},
+  type = {{{FAQ}}}
+}
+
 @article{JEA2016,
   title = {Map Data Representation for Indoor Navigation a Design Framework towards a Construction of Indoor Map},
   author = {Jeamwatthanachai, Watthanasak and Wald, Mike and Wills, Gary},
