--- a/preprocessors/definitions.tex
+++ b/preprocessors/definitions.tex
@@ -59,6 +59,7 @@
 	\centering
 	\includegraphics[scale=0.25]{images/appendix/#1}
 	\caption*{#2}
+	\label{fig:#1}
 \end{figure}
 }
 
@@ -74,3 +75,20 @@
 \subsubsection{Fazit}
 #5
 }
+
+\let\oldsection\section
+\makeatletter
+\newcounter{@secnumdepth}
+\RenewDocumentCommand{\section}{s o m}{%
+  \IfBooleanTF{#1}
+    {\setcounter{@secnumdepth}{\value{secnumdepth}}% Store secnumdepth
+     \setcounter{secnumdepth}{0}% Print only up to \chapter numbers
+     \oldsection{#3}% \section*
+     \setcounter{secnumdepth}{\value{@secnumdepth}}}% Restore secnumdepth
+    {\IfValueTF{#2}% \section
+       {\oldsection[#2]{#3}}% \section[.]{..}
+       {\oldsection{#3}}}% \section{..}
+}
+\makeatother
+
+\makeatletter \def\@pnumwidth{50pt}\makeatother
