Add analysis parts

--- a/references.bib
+++ b/references.bib
@@ -59,6 +59,41 @@
   language = {English}
 }
 
+@misc{AUT2020,
+  title = {{AutoCAD Mobil-App}},
+  author = {{Autodesk}},
+  year = {2020},
+  url = {https://www.autodesk.de/products/autocad-mobile/overview},
+  urldate = {2020-09-21},
+  copyright = {\textcopyright{} Copyright 2020 Autodesk, Inc. Alle Rechte vorbehalten.},
+  journal = {AutoCAD Mobil-App | 2D-Zeichenwerkzeug auf Mobilger\"aten |~Autodesk},
+  language = {Deutsch},
+  type = {{Product Page}}
+}
+
+@misc{AUT2020a,
+  title = {{{AutoCAD Web App}}},
+  author = {{Autodesk}},
+  year = {2020},
+  url = {https://www.autodesk.com/products/autocad-web-app/overview},
+  urldate = {2020-09-21},
+  copyright = {\textcopyright{} 2020 Autodesk Inc. All rights reserved},
+  journal = {AutoCAD Web App | Online Browser-based CAD Drawing Application | Autodesk},
+  language = {English},
+  type = {Product {{Page}}}
+}
+
+@misc{AUT2020b,
+  title = {{AutoCAD}},
+  author = {{Autodesk}},
+  year = {2020},
+  url = {https://knowledge.autodesk.com/de/support/autocad/learn?sort=score},
+  urldate = {2020-09-21},
+  journal = {Lernen | AutoCAD | Autodesk Knowledge Network},
+  language = {Deutsch},
+  type = {{FAQ}}
+}
+
 @misc{BAR2013,
   title = {Blink: {{A}} Rendering Engine for the {{Chromium}} Project},
   author = {Barth, Adam},
