--- a/thesis.tex
+++ b/thesis.tex
@@ -27,11 +27,11 @@
 }
 \newglossaryentry{l10n}{
 	name={Lokalisierung},
-	description={Das Durchführen einer Übersetzung der Anwendung in eine andere Sprache bzw. Kultur}
+	description={Das Durchführen einer Übersetzung der Anwendung in eine andere Sprache beziehungsweise Kultur}
 }
 \newglossaryentry{protocol}{
 	name={Protokoll},
-	description={In der Swift-Entwicklung – in anderen Sprachen auch als Interface bekannt – eine Zusammenfassung von deklarierten Funktionen, ohne Implementation. Wenn eine Klasse oder eine andere Struktur ein Protokoll implementiert, müssen die deklarierten Funktionen in dieser Klasse implementiert werden}
+	description={In der Swift-Entwicklung – in anderen Sprachen auch als Interface bekannt – eine Zusammenfassung von deklarierten Funktionen, ohne Implementierung. Wenn eine Klasse oder eine andere Struktur ein Protokoll implementiert, müssen die deklarierten Funktionen in dieser Klasse implementiert werden}
 }
 
 \newcounter{currentpage}
