Add map overlay section

--- a/thesis.tex
+++ b/thesis.tex
@@ -84,11 +84,11 @@
 	\setcounter{page}{\thecurrentpage}
 
 	\input chapters/01-introduction
-	\input chapters/02-theory-and-basics
-	\input chapters/03-analysis
-	\input chapters/04-conception
-	\input chapters/05-implementation
-	\input chapters/06-conclusion
+	%\input chapters/02-theory-and-basics
+	%\input chapters/03-analysis
+	%\input chapters/04-conception
+	%\input chapters/05-implementation
+	%\input chapters/06-conclusion
 	\clearpage
 	\setcounter{currentpage}{\arabic{page}}
 
