Fix front matter and introduction

--- a/pages/abstract.tex
+++ b/pages/abstract.tex
@@ -1,10 +1,11 @@
 \chapter*{Abstract}
-Während der Tourismus und die Reiselust der Menschen steigt werden Kartendaten und Navigation immer wichtiger, um sich orientieren zu können.
-Um diese Entwicklung zu unterstützen werden \emph{Indoor Maps} immer wichtiger, doch sind komplex in deren Erstellung.\pbreak%
+Während der Tourismus und die Reiselust der Menschen steigt werden Kartendaten und Navigation immer wichtiger, damit man sich orientieren kann.
+Um diese Entwicklung zu unterstützen werden \emph{Indoor Maps} immer signifikanter, doch sind komplex in ihrer Erstellung.\pbreak%
 %
-Ziel dieser Bachelorthesis ist es eine benutzerfreundliche und einfach zu bedienende mobile Anwendung zu entwickeln, um Indoor Maps zu kartographieren und für die weitere Verwendung bereitszustellen.
-Um dieses Ziel zu erreichen werden Anforderungen an eine solche Anwendung aufgestellt und die aktuell existierenden Lösungen anhand dieser Anforderungen analysiert um etwaige Probleme zu erkennen.\pbreak%
+Ziel dieser Bachelorthesis ist es eine benutzerfreundliche und einfach zu bedienende mobile Anwendung zu entwickeln, sodass Indoor Maps kartographiert und für die weitere Verwendung bereitgestellt werden können.
+Um dieses Ziel zu erreichen, werden Anforderungen an eine solche Anwendung aufgestellt und die aktuell existierenden Lösungen anhand dieser Anforderungen analysiert, um etwaige Probleme zu erkennen.\pbreak%
 %
-In der Anwendung sollen Benutzer Indoor Maps erstellen und für eine Bereitstellung exportieren können.
-In der technischen Umsetzung wurde das Software Development Kit von Apple genutzt, um mittels Swift eine Anwendung für das Betriebssystem iPadOS zu entwickeln.
+Die Anwendung soll Benutzern das Erstellen von Indoor Maps ermöglichen und einen Export für die Bereitstellung anbieten.
+In der technischen Umsetzung wurde das Software Development Kit von Apple genutzt, um mittels Swift eine Anwendung für das Betriebssystem iOS beziehungsweise iPadOS zu entwickeln.
+Die Ergebnisse wurden im Anschluss mit den aufgestellten Anforderungen und den analysierten Lösungen verglichen.
 \clearpage
