--- a/thesis.tex
+++ b/thesis.tex
@@ -84,7 +84,7 @@
 	\setcounter{page}{\thecurrentpage}
 
 	\input chapters/01-introduction
-	%\input chapters/02-theory-and-basics
+	\input chapters/02-theory-and-basics
 	%\input chapters/03-analysis
 	%\input chapters/04-conception
 	%\input chapters/05-implementation
