--- a/preprocessors/definitions.tex
+++ b/preprocessors/definitions.tex
@@ -68,7 +68,7 @@
 #1
 \subsubsection{Schnelle Einarbeitungszeit}
 #2
-\subsubsection{Leichte und Nachvollziehbare Bedienung}
+\subsubsection{Leichte und nachvollziehbare Bedienung}
 #3
 \subsubsection{Mobile Nutzung}
 #4
