--- a/thesis.tex
+++ b/thesis.tex
@@ -85,7 +85,7 @@
 
 	\input chapters/01-introduction
 	\input chapters/02-theory-and-basics
-	%\input chapters/03-analysis
+	\input chapters/03-analysis
 	%\input chapters/04-conception
 	%\input chapters/05-implementation
 	%\input chapters/06-conclusion
