--- a/thesis.tex
+++ b/thesis.tex
@@ -86,7 +86,7 @@
 	\input chapters/01-introduction
 	\input chapters/02-theory-and-basics
 	\input chapters/03-analysis
-	%\input chapters/04-conception
+	\input chapters/04-conception
 	%\input chapters/05-implementation
 	%\input chapters/06-conclusion
 	\clearpage
