--- a/pages/appendix.tex
+++ b/pages/appendix.tex
@@ -21,22 +21,22 @@
 \chapter*{Anhang}
 \addtableofcontentsitem{Anhang}
 \section*{A Anwendungsaufnahmen}
-\appendixfigure{01-settings}{A.1 Übersicht der App-Einstellungen.}
+\appendixfigure{01-settings}{A.1 Übersicht der App-Einstellungen}
 \vspace*{\fill}
-\appendixfigure{02-create}{A.2 Popover-Formular zum Erstellen eines neuen Projektes.}
+\appendixfigure{02-create}{A.2 Popover-Formular zum Erstellen eines neuen Projektes}
 \vspace*{\fill}
-\appendixfigure{03-project}{A.3 Übersicht eines ausgewählten Projektes (erkennbar in der Seitenleiste).}
+\appendixfigure{03-project}{A.3 Übersicht eines ausgewählten Projektes (erkennbar in der Seitenleiste)}
 \vspace*{\fill}
-\appendixfigure{04-address}{A.4 Formular zum Erstellen einer neuen Adresse, die im Projekt verfügbar wird.}
-\appendixfigure{05-province}{A.5 Auswahl für das Provinzfeld einer Adresse, nachdem bei der Länderauswahl das Land Deutschland gewählt wurde.}
-\appendixfigure{06-map}{A.6 Übersicht des Karteneditors mit der Werkzeugleiste auf der linken Seite.}
-\appendixfigure{07-ruler}{A.7 Verwendung des Ruler-Werkzeuges (erkennbar am dunklen Balken).}
-\appendixfigure{08-polygon}{A.8 Zeichnen eines Polygons in den Kartendaten.}
-\appendixfigure{09-unit}{A.9 Bearbeiten eines Unit-Features im Karteneditor.}
-\appendixfigure{10-change}{A.10 Auswahl zum Wechsel des Feature-Typs.}
-\appendixfigure{11-label}{A.11 Formular zum Anlegen eines weiteren Eintrags für das Name-Feld des Features.}
-\appendixfigure{12-labels}{A.12 Übersicht der Einträge für den Namen eines Features.}
-\appendixfigure{13-venue}{A.13 Formular der Einstellungen eines Venue-Features mit ausgewählter Adresse.}
+\appendixfigure{04-address}{A.4 Formular zum Erstellen einer neuen Adresse, die im Projekt verfügbar sein wird}
+\appendixfigure{05-province}{A.5 Auswahl für das Provinzfeld einer Adresse}
+\appendixfigure{06-map}{A.6 Übersicht des Karteneditors mit der Werkzeugleiste auf der linken Seite}
+\appendixfigure{07-ruler}{A.7 Verwendung des Ruler-Werkzeugs (erkennbar am dunklen Balken)}
+\appendixfigure{08-polygon}{A.8 Zeichnen eines Polygons in den Kartendaten}
+\appendixfigure{09-unit}{A.9 Bearbeiten eines Unit-Features im Karteneditor}
+\appendixfigure{10-change}{A.10 Auswahl zum Wechsel des Feature-Typs}
+\appendixfigure{11-label}{A.11 Formular zum Anlegen eines weiteren Eintrags für das Name-Feld des Features}
+\appendixfigure{12-labels}{A.12 Übersicht der Einträge für den Namen eines Features}
+\appendixfigure{13-venue}{A.13 Formular der Einstellungen eines Venue-Features mit ausgewählter Adresse}
 \clearpage
 \section*{B Quellcode}
 \label{sec:appendixb}
@@ -48,7 +48,7 @@ Erledige alle Aufgaben in der aufgelisteten Reihenfolge und Bewerte im Anschluss
 	\item[A1] Erstelle ein neues Projekt mit dem Namen \emph{Usability Test Projekt}.
 	\item[A2] Aktualisiere die Beschreibung des erstellen Projektes zu \emph{Beispielprojekt für einen Usability Test}.
 	\item[A3] Füge eine neue Adresse hinzu und wähle Hamburg als Ort. Die restlichen Eingaben können frei gewählt werden.
-	\item[A4] Öffne den Kartenbearbeitungsmodus und zeichne ein sechseck. Notiere die angezeigte \emph{Feature ID} und wechsle den \emph{Feature Type} zu \emph{Venue}.
+	\item[A4] Öffne den Kartenbearbeitungsmodus und zeichne ein Sechseck. Notiere die angezeigte \emph{Feature ID} und wechsle den \emph{Feature Type} zu \emph{Venue}.
 	\item[A5] Vergebe einen beliebigen Namen und wähle die in Aufagbe 3 erstellte Adresse für das Objekt.
 	\item[A6] Miss die Entfernung zwischen Hamburg und Berlin und notiere das Ergebnis.
 \end{description}
