--- a/thesis.tex
+++ b/thesis.tex
@@ -87,8 +87,8 @@
 	\input chapters/02-theory-and-basics
 	\input chapters/03-analysis
 	\input chapters/04-conception
-	%\input chapters/05-implementation
-	%\input chapters/06-conclusion
+	\input chapters/05-implementation
+	\input chapters/06-conclusion
 	\clearpage
 	\setcounter{currentpage}{\arabic{page}}
 
