Fix referenced urls

--- a/references.bib
+++ b/references.bib
@@ -41,7 +41,7 @@
   title = {Platform {{Support}}},
   author = {{Apple Inc.}},
   year = {2020},
-  url = {https://swift.org/about/\#platform-support},
+  url = {https://swift.org/about/},
   urldate = {2020-08-13},
   journal = {Swift.org - About Swift},
   language = {English}
@@ -341,7 +341,7 @@
   title = {Feature: {{Quantum GIS}} Is Now Known Only as `{{QGIS}}'},
   author = {{QGIS}},
   year = {2013},
-  url = {https://www.qgis.org/en/site/forusers/visualchangelog200/index.html\#feature-quantum-gis-is-now-known-only-as-qgis},
+  url = {https://www.qgis.org/en/site/forusers/visualchangelog200/index.html},
   urldate = {2020-09-19},
   journal = {Changelog for QGIS 2.0},
   language = {English},
@@ -364,7 +364,7 @@
   title = {{Unterst\"utzen Sie QGIS!}},
   author = {{QGIS-Anwendergruppe Deutschland e.V.}},
   year = {2020},
-  url = {https://www.qgis.de/\#unterstuetzen_sie_qgis},
+  url = {https://www.qgis.de/},
   urldate = {2020-09-19},
   copyright = {CC-BY-SA},
   journal = {start [QGIS-DE e.V.]},
