Update pdf subject

--- a/preprocessors/packages.tex
+++ b/preprocessors/packages.tex
@@ -95,7 +95,7 @@
 	\usepackage[
 		hidelinks,
 		pdfusetitle,
-		pdfsubject={The Subject},
+		pdfsubject={Konzeption und Realisierung einer mobilen Anwendung zur Erstellung von Indoor Maps},
 		pdflang={de},
 		pdfkeywords={Indoor Mapping, Indoor Maps, iOS, Application, Mobile Application, iPad, JSON, GeoJSON, GIS},
 		pdfproducer={XeLaTeX \the\eTeXversion\eTeXrevision-\the\XeTeXversion\XeTeXrevision},
