Fix spelling and grammar

--- a/pages/abstract.tex
+++ b/pages/abstract.tex
@@ -1,8 +1,9 @@
 \chapter*{Abstract}
-Während der Tourismus und die Reiselust der Menschen steigt werden Kartendaten und Navigation immer wichtiger, damit man sich orientieren kann.
-Um diese Entwicklung zu unterstützen werden \emph{Indoor Maps} immer signifikanter, doch sind komplex in ihrer Erstellung.\pbreak%
+Während der Tourismus und die Reiselust der Menschen steigt, werden Kartendaten und Navigation immer wichtiger, damit man sich orientieren kann.
+Um diese Entwicklung zu unterstützen, werden \emph{Indoor Maps} immer signifikanter.
+Doch sie sind komplex in ihrer Erstellung.\pbreak%
 %
-Ziel dieser Bachelorthesis ist es eine benutzerfreundliche und einfach zu bedienende mobile Anwendung zu entwickeln, sodass Indoor Maps kartographiert und für die weitere Verwendung bereitgestellt werden können.
+Ziel dieser Bachelorthesis ist es, eine benutzerfreundliche und einfach zu bedienende mobile Anwendung zu entwickeln, sodass Indoor Maps kartographiert und für die weitere Verwendung bereitgestellt werden können.
 Um dieses Ziel zu erreichen, werden Anforderungen an eine solche Anwendung aufgestellt und die aktuell existierenden Lösungen anhand dieser Anforderungen analysiert, um etwaige Probleme zu erkennen.\pbreak%
 %
 Die Anwendung soll Benutzern das Erstellen von Indoor Maps ermöglichen und einen Export für die Bereitstellung anbieten.
