--- a/pages/preface.tex
+++ b/pages/preface.tex
@@ -2,9 +2,9 @@
 Vor Ihnen liegt die Bachelorthesis ``\thetitle``, die ich zur Erlangung des Grades eines Bachelor of Science (B.Sc.) im Studiengang der Wirtschaftsinformatik verfasst habe.
 \pbreak
 Im Laufe meines Studiums ist mir aufgefallen, dass es noch keine mobile Anwendung für die Studierenden der HTW Berlin gibt und habe deshalb eine solche als Nebenprojekt entwickelt.
-Eines der Funktionen sollte sein, dass man über eine Campus-Map alle wichtigen Orte und Räume suchen und finden kann.
+Eine der Funktionen sollte sein, dass man über eine Campus-Map alle wichtigen Orte und Räume suchen und finden kann.
 Durch diese Problemstellung bin ich auf das Thema \textit{Indoor Mapping} gestoßen und habe nach Möglichkeiten gesucht, um Indoor Maps für diesen Fall zu erstellen.
-Die Notwendigkeit eine Indoor Map in dem genannten Projekt bereitzustellen hat mich dazu bewegt eine mobile Anwendung zu entwickeln, die es ermöglicht Indoor Maps schnell und einfach zu erstellen.
+Die Notwendigkeit eine Indoor Map bereitzustellen, hat mich dazu bewegt, eine mobile Anwendung zu entwickeln, die es ermöglicht, Indoor Maps schnell und einfach zu erstellen.
 Die Ergebnisse habe ich in dieser Thesis dokumentiert.
 \pbreak
 Ich wünsche Ihnen viel Spaß und interessante Einblicke in die Thematik des Indoor Mappings beim Lesen der Thesis.
